--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.16.0",
     "@mui/material": "^5.16.0",
     "next": "14.2.4",
     "prettier": "^3.3.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-material-ui-carousel": "^3.4.2",
+    "sass": "^1.77.6"
   },
   "devDependencies": {
     "@types/node": "^20",
